envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/freenet+envoy/trojan-ws" }
                route: { cluster: xray_trojan_ws, upgrade_configs: [{ upgrade_type: websocket }] }
              - match: { prefix: "/freenet+envoy/trojan-hu" }
                route: { cluster: xray_trojan_hu }
              - match: { prefix: "/freenet+envoy/vless-ws" }
                route: { cluster: xray_vless_ws, upgrade_configs: [{ upgrade_type: websocket }] }
              - match: { prefix: "/freenet+envoy/vless-hu" }
                route: { cluster: xray_vless_hu }
              - match: { prefix: "/freenet+envoy/vmess-ws" }
                route: { cluster: xray_vmess_ws, upgrade_configs: [{ upgrade_type: websocket }] }
              - match: { prefix: "/freenet+envoy/vmess-hu" }
                route: { cluster: xray_vmess_hu }
              - match: { prefix: "/freenet+envoy/ss-ws" }
                route: { cluster: xray_ss_ws, upgrade_configs: [{ upgrade_type: websocket }] }
              - match: { prefix: "/freenet+envoy/ss-hu" }
                route: { cluster: xray_ss_hu }
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: xray_trojan_ws
    connect_timeout: 1s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: xray_trojan_ws
      endpoints: [{ lb_endpoints: [{ endpoint: { address: { socket_address: { address: 127.0.0.1, port_value: 10000 } } } }] }]
  - name: xray_trojan_hu
    connect_timeout: 1s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: xray_trojan_hu
      endpoints: [{ lb_endpoints: [{ endpoint: { address: { socket_address: { address: 127.0.0.1, port_value: 10001 } } } }] }]
  - name: xray_vless_ws
    connect_timeout: 1s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: xray_vless_ws
      endpoints: [{ lb_endpoints: [{ endpoint: { address: { socket_address: { address: 127.0.0.1, port_value: 10002 } } } }] }]
  - name: xray_vless_hu
    connect_timeout: 1s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: xray_vless_hu
      endpoints: [{ lb_endpoints: [{ endpoint: { address: { socket_address: { address: 127.0.0.1, port_value: 10003 } } } }] }]
  - name: xray_vmess_ws
    connect_timeout: 1s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: xray_vmess_ws
      endpoints: [{ lb_endpoints: [{ endpoint: { address: { socket_address: { address: 127.0.0.1, port_value: 10004 } } } }] }]
  - name: xray_vmess_hu
    connect_timeout: 1s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: xray_vmess_hu
      endpoints: [{ lb_endpoints: [{ endpoint: { address: { socket_address: { address: 127.0.0.1, port_value: 10005 } } } }] }]
  - name: xray_ss_ws
    connect_timeout: 1s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: xray_ss_ws
      endpoints: [{ lb_endpoints: [{ endpoint: { address: { socket_address: { address: 127.0.0.1, port_value: 10006 } } } }] }]
  - name: xray_ss_hu
    connect_timeout: 1s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: xray_ss_hu
      endpoints: [{ lb_endpoints: [{ endpoint: { address: { socket_address: { address: 127.0.0.1, port_value: 10007 } } } }] }]
